--- a/virion.yml
+++ b/virion.yml
@@ -2,7 +2,8 @@
 name: multilingual-resource-trait
 antigen: kim\present\traits\multilingualresource
 version: 1.0.0
-api: 4.0.0
+api: [ 3.0.0, 4.0.0 ]
 author: PresentKim
 description: Trait for multilingual resource file support
+php: [ 7.4 ]
 ...
